--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@schoolab/inject-icons": "^1.18.3",
     "dompurify": "^3.2.0",
     "jquery": "3.7.1",
-    "next": "14.2.5",
+    "next": ">=14.2.21",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -53,7 +53,10 @@
     "react-syntax-highlighter": "^15.5.0",
     "storybook": "^8.2.5",
     "storybook-dark-mode": "^4.0.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "cross-spawn": ">=7.0.5",
+    "nanoid": ">=3.3.8",
+    "webpack": ">=5.94.0"
   },
   "resolutions": {
     "resolve-url-loader": "5.0.0"
